--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
   "name": "set-nested-prop",
   "version": "1.0.0",
-  "description": "Set nested object property (supports custom seperator and mutation)",
+  "description": "Set nested object property (supports custom seperator, mutation, forcing creation & multi set)",
   "license": "MIT",
-  "main": "index.js",
+  "source": "src/index.js",
+  "main": "dist/set-nested-prop.js",
+  "browser": "dist/set-nested-prop.umd.js",
+  "module": "dist/set-nested-prop.m.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/tiaanduplessis/set-nested-prop.git"
   },
   "homepage": "https://github.com/tiaanduplessis/set-nested-prop",
   "bugs": "https://github.com/tiaanduplessis/set-nested-prop/issues",
-  "author": {
-    "name": "Tiaan",
-    "email": "tiaanduplessis@hotmail.com",
-    "url": "tiaan.beer"
-  },
+  "author": "Tiaan du Plessis",
   "scripts": {
-    "start": "npm test",
-    "pretest": "npm run format; npm run lint:fix",
-    "test": "jest --env=node",
-    "test:watch": "npm test -- --watch",
-    "coverage": "npm test -- --coverage",
-    "lint": "standard --verbose",
-    "lint:fix": "standard --fix --verbose",
-    "format": "prettier --print-width 100 --semi false --single-quote --write index.js",
-    "precommit": "npm test"
+    "test": "jest",
+    "lint": "standard --fix",
+    "build": "microbundle",
+    "coverage": "jest --coverage"
   },
   "keywords": [
     "object",
@@ -33,12 +27,19 @@
     "dot-notation",
     "set-nested-prop"
   ],
-  "dependencies": {
-    "prettier": "^1.3.1"
-  },
   "devDependencies": {
-    "husky": "^0.13.3",
-    "jest": "^20.0.4",
-    "standard": "^10.0.1"
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0",
+    "microbundle": "^0.4.4",
+    "standard": "^11.0.1"
+  },
+  "standard": {
+    "ignore": ["dist"],
+    "env": {
+      "jest": true
+    }
+  },
+  "babel": {
+    "presets": ["env"]
   }
 }
